[tool.poetry]
name = "sustainability-lens-elm-challenge"
version = "0.1.0"
description = ""
authors = ["Rishbh Arora <vsryarora6879@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
